# MicDroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/net/sourceforge/autotalent/: Autotalent.java
app/src/main/res/values-v19/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
